--- a/Strona/package.json
+++ b/Strona/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "strona",
+  "name": "",
   "version": "1.0.0",
   "description": "",
-  "main": "db.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "index.js",
+  "type": "module",
+  "license": "AGPL-version-3.0",
+  "private": false,
+  "engines": {
+    "node": ">= 14.0.0",
+    "npm": ">= 6.0.0"
   },
+  "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "bugs": "",
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "fs-extra": "^11.1.1"
+  "author": {
+    "name": "",
+    "email": "",
+    "url": ""
   },
-  "type": "module"
+  "contributors": [],
+  "scripts": {
+    "dev": "",
+    "test": ""
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "morgan": "^1.10.0"
+  }
 }
