--- a/Strona/package.json
+++ b/Strona/package.json
@@ -28,6 +28,7 @@
     "test": ""
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "morgan": "^1.10.0"
